# malkshur

./: .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  docker.sh
Dockerfiles/: Dockerfile.ardupilot  Dockerfile.droneproject  Dockerfile.gazebo  Dockerfile.gzweb
docker_data/ardupilot_sitl/: entrypoint-ardupilot.sh  locations.txt
docker_data/ardupilot_sitl/params/: sim_copter.parm
docker_data/drone_project/: entrypoint-droneproject.sh  requirements.txt
docker_data/drone_project/src/: .gitignore  CLAUDE.md  DETECTION_COMMANDS.md  DETECTION_SYSTEM.md  Dockerfile  README.md  altitude_control_data.json  autostart.txt  calculate_distance.py  check_gazebo_altitude.py  dev-requirements.txt  docker-compose.yml  docker_build.sh  docker_run.sh  grab_frame.py  plot_altitude_csv_data.py  plot_navigation_data.py  plot_position_pid_data.py  pytest.ini  requirements.txt  run_controller.py  run_gazebo.sh  start.sh  telnet_examples.md  xbee_process_com.py
docker_data/drone_project/src/camera_test/: CONTROL_DEMO.md  README.md  SYSTEM_OVERVIEW.md  docker_with_commands.sh  run_docker_detection_with_server.py  run_docker_detection_with_server_with_control.py  run_docker_detection_with_server_with_control_new.py
docker_data/drone_project/src/dd_shahed/: .gitignore  CMakeLists.txt  README.md  requirements.txt
docker_data/drone_project/src/dd_shahed/include/: detection.h  direction_vector.h  logger.h  socket_client.h  tcp_frame_client.h  trt_engine.h  utils.h
docker_data/drone_project/src/dd_shahed/scripts/: convert_onnx_to_engine.py  export_to_onnx.py  extract_video_frames.py  find_drone_images_tg.py  get_host_ip.sh  mock_server_tcp.py  mock_server_udp.py
docker_data/drone_project/src/dd_shahed/src/: detection.cpp  direction_vector.cpp  main.cpp  socket_client.cpp  tcp_frame_client.cpp  trt_engine.cpp  utils.cpp
docker_data/drone_project/src/docs/: REFACTORING_PLAN.md  control_loop_timing.md  jetson_uart_setup.md
docker_data/drone_project/src/examples/: CSI_camera.py  apmsetrate.py  jetson_camera_test.py  simple_camera.py  simulationCamera.py
docker_data/drone_project/src/gazebo/: fix_pygazebo.py  fix_pygazebo_direct.py  grid_sweep_orb.py
docker_data/drone_project/src/help_info/: Changing dron state  Configure Jatson Nano.txt  FC_messages.txt  FIx_troubles_with_project  GAZEBO_PX4.txt  autostart.txt
docker_data/drone_project/src/legacy/: README.md  communicator.py  ultrasonic_sensor.py
docker_data/drone_project/src/legacy/convertor/: cen_model_python_v2(with_data).py
docker_data/drone_project/src/modules/: interfaces.py
docker_data/drone_project/src/sky_anchor/: .env  .gitignore  CLAUDE.md  README.md  camera_measurements.py  gazebo_classic_bridge.py  main.py  opencv_python-4.5.0-py3-none-any.whl  requirements.txt  verify_cuda_opencv.py
docker_data/drone_project/src/sky_anchor/app/: command_publisher.py  config.py  controller.py  logger.py  profiler.py  sky_anchor_server.py
docker_data/drone_project/src/sky_anchor/app/frame/: __init__.py  camera.py  debug_writer.py  normalization.py  provider.py
docker_data/drone_project/src/sky_anchor/app/navigation/: __init__.py  command_modifier.py  command_server.py  coordinator.py  navigation_csv_logger.py  types.py  velocity_controller.py
docker_data/drone_project/src/sky_anchor/app/vision/: __init__.py  estimator.py  evaluator.py  parser.py
docker_data/drone_project/src/src/: altitude_config.py  altitude_csv_logger.py  app.py  battery_monitor.py  command_handler.py  controller.py  controller_config.py  detection_client.py  detection_config.py  detection_server.py  lidar_sensor.py  logger.py  mavlink_manager.py  pid_controller.py  position_config.py  position_controller.py  position_csv_logger.py  sensor_manager.py  signal_handler.py  sky_anchor_client.py  stabilizer_manager.py  targetTracker.py  telnet_server.py
docker_data/drone_project/src/src/config/: __init__.py  objects.py
docker_data/drone_project/src/src/domain/: __init__.py  types.py
docker_data/drone_project/src/src/flight/: __init__.py  intercept.py  setpoints.py  stabilization.py
docker_data/drone_project/src/tests/unit/: conftest.py  generate_characterization.py  test_app.py  test_characterization.py  test_command_handler.py  test_command_modifier.py  test_config_objects.py  test_controller.py  test_detection_server.py  test_domain_types.py  test_intercept_guidance.py  test_pid_controller.py  test_position_controller.py  test_setpoints.py  test_shift_evaluator.py  test_sky_anchor_client.py  test_stabilization_behavior.py  test_stabilizer_manager.py
docker_data/gazebo/: CMakeLists.txt  entrypoint-gazebo.sh
docker_data/gazebo/include/: FollowerDownCamPlugin.hh
docker_data/gazebo/models/down_cam/: model.config  model.sdf
docker_data/gazebo/models/gimbal_small_2d/: model.sdf
docker_data/gazebo/models/ground_plane_unique/: model.config  model.sdf
docker_data/gazebo/models/iris_with_ardupilot/: model.sdf
docker_data/gazebo/models/iris_with_ardupilot_mykola_1/: model.sdf
docker_data/gazebo/models/iris_with_ardupilot_mykola_2/: model.sdf
docker_data/gazebo/models/iris_with_standoffs_demo/: model.sdf
docker_data/gazebo/models/orb_optimized_ground/: model.config  model.sdf
docker_data/gazebo/src/: FollowerDownCamPlugin.cc
docker_data/gazebo/worlds/: iris_arducopter_cmac.world  iris_arducopter_runway.world  iris_ardupilot.world  iris_irlock_demo.world  iris_multiuav.world
scripts/: compare_runs.py  golden_run.sh
(+3 files in other folders)
